<resources>
    <string name="app_name">OneQ</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login_button_text">Sign In</string>
    <string name="login_text">Already have an Account ?</string>
    <string name="register_account_text">Don’t have an Account ?</string>
    <string name="register_button_text">Sign Up</string>
    <string name="guest_login_button_text">Login as Guest</string>
    <string name="re_enter_password_hint">Re-Enter Password</string>
    <string name="user_text">User</string>
    <string name="business_text">Business</string>
    <string name="continue_button_text">Continue</string>
    <string name="select_type_text">Select Type</string>
    <string name="name_hint">Name</string>
    <string name="phone_number_hint">Phone Number</string>
    <string name="pin_code_hint">Pin Code</string>
    <string name="register_text">Register</string>
    <string name="company_name_hint">Company Name</string>
    <string name="address_map_link_hint">Address/Map link</string>
    <string name="description_hint">Description</string>
    <string name="select_category_hint">Select Category</string>
    <string name="select_image_text">Select Image</string>
    <string name="upload_image_success">Image Uploaded</string>
    <string name="text_none">None</string>
    <array name="category">
        <item>Bank</item>
        <item>Hospital</item>
        <item>Hotel</item>
        <item>Office</item>
        <item>Others</item>
        <item>Shop</item>
    </array>
    <array name="type_shop">
        <item>Bakery</item>
        <item>Crockery shop</item>
        <item>Electrical shop</item>
        <item>Fish shop</item>
        <item>Flowers</item>
        <item>Fruits and veg</item>
        <item>Furniture</item>
        <item>General stores</item>
        <item>Hardware shop</item>
        <item>Kids ware</item>
        <item>Ladies stores</item>
        <item>Medical Store</item>
        <item>Medical stores</item>
        <item>Saloon</item>
        <item>Stationary</item>
        <item>Stationary</item>
        <item>Super market</item>
        <item>Textile</item>
    </array>
    <array name="type_hotel">
        <item>Non-Veg</item>
        <item>Vegetarian</item>
        <item>Veg and Non-Veg</item>
    </array>
    <array name="type_hospital">
        <item>Allopathic</item>
        <item>Ayurvedic Hospital</item>
        <item>Brain and spine Hospital</item>
        <item>De addiction-center</item>
        <item>De addiction-center</item>
        <item>Dental Hospital</item>
        <item>ENT</item>
        <item>General</item>
        <item>Homeo Hospital</item>
        <item>IVF Hospital</item>
        <item>Ophthalmologist</item>
        <item>Ortho Hospital</item>
        <item>Palliative care center</item>
        <item>Physiotherapy</item>
        <item>Skin</item>
        <item>Yunani Hospitals</item>
    </array>
    <array name="type_bank">
        <item>Commercial Bank</item>
        <item>Cooperative Bank</item>
        <item>Credit Union</item>
        <item>Investment Bank</item>
        <item>Shadow Bank</item>
        <item>Central Bank</item>
    </array>
    <array name="type_office">
        <item>College Offices</item>
        <item>KSEB</item>
        <item>Krishi Bhavan</item>
        <item>Post Office</item>
        <item>Sub Registration office</item>
        <item>Village Office</item>
    </array>
    <string name="title_activity_main_user">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_profile">Profile</string>
    <string name="title_qrcode">QR-Code</string>
    <string name="logout_button_text">Logout</string>
    <string name="title_activity_main_business">MainActivity</string>
    <string name="title_scan_qrcode">Scan Qr Code</string>
    <string name="shop_closed_text">Shop Closed</string>
    <string name="users_in_queue_text">Users In Queue</string>
    <string name="nothing_text">No</string>
</resources>