<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_business_home">

    <fragment
        android:id="@+id/navigation_business_home"
        android:name="com.jdream.oneq.business.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_business_home" />

    <fragment
        android:id="@+id/navigation_scan_qrcode"
        android:name="com.jdream.oneq.business.ui.qrcode.QrcodeFragment"
        android:label="@string/title_scan_qrcode"
        tools:layout="@layout/fragment_scan_qrcode" />

    <fragment
        android:id="@+id/navigation_business_profile"
        android:name="com.jdream.oneq.business.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_business_profile" />
</navigation>